# eris

./: Cargo.toml  README.md
eris-bin/: Cargo.toml
eris-bin/src/: main.rs
eris-book/: book.toml
eris-book/src/: SUMMARY.md  concepts.md  host.md  user-guide.md  welcome.md
eris-book/src/architecture/: activitypub_federation.md  event-sourced.md  lambda-crate.md  rate-limiting.md  read-model.md  serverless-vs-monolith.md  utoipa.md  why-tower.md  write-model.md
eris-book/src/concepts/: activities.md  activitypub.md  features.md  federation.md  objects.md  users-vs-channels.md
eris-book/src/concepts/activities/: channel.md  foreign.md  instance.md  user.md
eris-book/src/concepts/features/: comparisons.md  eris-features.md
eris-book/src/host/: deploy_app_commands.md  domain.md  invite_users.md  launch.md  register-discord.md
eris-book/src/host/launch/: monolith.md
eris-book/src/user-guide/: auth.md  discord-interface.md  graphql.md  join-app.md  openapi.md
eris-book/src/user-guide/auth/: entication.md  orization.md
eris-book/src/user-guide/discord-interface/: message.md  slash.md  user.md
eris-cache/: Cargo.toml
eris-cache/src/: lib.rs  moka.rs
eris-data/: Cargo.toml
eris-discord/: Cargo.toml
eris-discord/src/: layers.rs  lib.rs  services.rs
eris-discord/src/deploy/: message.rs  slash.rs
eris-discord/src/layers/: post_to_discord.rs
eris-juniper/: Cargo.toml
eris-juniper/src/: channel.rs  context.rs  instance.rs  interfaces.rs  lib.rs  nodes.rs  object.rs  query.rs
eris-juniper/src/interfaces/: activity.rs  actor.rs  node.rs  object.rs
eris-juniper/src/nodes/: channel.rs
eris-juniper/src/scalars/: node_id.rs  snowflake.rs
eris-lib/: Cargo.toml
eris-lib/src/: deploy.rs  experiment.rs  layers.rs  lib.rs  model.rs  payloads.rs  scheduling.rs  services.rs
eris-lib/src/deploy/: message.rs
eris-lib/src/layers/: body_to_bytes.rs  callback_service.rs  default_if_none.rs  deserialize_json.rs  discord_endpoint.rs  discord_server_action_queue_provider.rs  extract_body.rs  lambda_http_compatibility.rs  provide_cloned_state.rs  queue_provider.rs  respond_to_interaction.rs  twilight_client_provider_layer.rs  verify_signature.rs  verify_signature_real.rs
eris-lib/src/payloads/: discord_client_action_response.rs  discord_server_action.rs
eris-lib/src/scheduling/: background_service.rs  batch_forwarding.rs
eris-lib/src/services/: discord_client.rs  discord_client_action.rs  discord_endpoint.rs  discord_endpoint_real.rs  discord_handler.rs  discord_inbox.rs  discord_outbox.rs  in_memory_queue.rs  interaction_response.rs  queue_interaction.rs  twilight_service.rs
eris-lib/src/services/discord_client/: client_action_response.rs  client_actions.rs  error.rs
eris-lib/src/services/discord_handler/: server_actions.rs
