[package]
name = "eris-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {version = "1.4.0", features = ["serde"] }
futures-util = "0.3.28"
moka = {version = "0.11.3", features = ["future"] }
redis = "0.23.2"
rmp-serde = "1.1.2"
serde = "1.0.183"
thiserror = "1.0.44"
tower = "0.4.13"
