[package]
name = "eris_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
axum-macros = "0.3.8"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
lambda_http = "0.8.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
tower = "0.4.13"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }
