[package]
name = "eris_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = "0.4.6"
axum = "0.6.19"
ed25519-dalek = "1.0.1"
futures-util = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
lambda_http = "0.8.1"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
sqlx = "0.7.1"
thiserror = "1.0.44"
tokio = "1.29.1"
tower = { version = "0.4.13", features = ["retry"]}
tower-http = { version = "0.4.3", features = ["add-extension"]}
tracing = "0.1.37"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }
twilight-validate = "0.15.1"
